crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/cannot_call_via_contract_type_name/base_contract/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 3419] Error: Cannot call function via contract type name.
    ╭─[input.sol:19:9]
    │
 19 │         B.f();
    │         ──┬──  
    │           ╰──── Error occurred here.
────╯

[TypeError 9582] Error: Member "selector" not found or not visible after argument-dependent lookup in function ().
    ╭─[input.sol:20:9]
    │
 20 │         B.g.selector;
    │         ──────┬─────  
    │               ╰─────── Error occurred here.
────╯
